--- a/Tugas3/style.css
+++ b/Tugas3/style.css
@@ -15,6 +15,9 @@ body{
     background-color: rgb(247,247, 251);
     border-radius: 5%;
 }
+.container *{
+    box-sizing: content-box;
+}
 .title{
     font-size: 55px;
     font-weight: 600;
@@ -37,6 +40,7 @@ body{
     color: gray;
     border: solid 1px gray;
 }
+
 .wdt100 :checked{
     color: gray;
 
@@ -55,50 +59,85 @@ body{
 .modal-dialog{
     box-sizing: content-box !important;
     top: 25%;
-    width: 40%; 
+    width: 30%; 
 }
-#modal-header{
+.mrg-0{
+    margin: 0;
+}
+.mrg-btm-20{
     margin-bottom: 20px;
+}
+.pad-btm-10{
+    padding-bottom: 10px;
+}
+#header{
     display: flex;
     flex-wrap: wrap;
     flex-shrink: 0;
     align-items: center;
     justify-content: space-between;
 }
-#modal-title{
+#title{
     font-size: 20px;
     margin-bottom: 0;
     font-weight: bold;
 }
-#modal-subtitle{
-    margin-bottom: 20px;
+#subtitle{
     font-size: 18px;
     text-align: left;
 }
-#modal-footer{
+#footer{
+    margin-top: 10px;
     display: flex;
     flex-wrap: wrap;
     flex-shrink: 0;
+    font-size: large;
     align-items: center;
     justify-content: flex-end;
     text-align: right;
 }
-#modal-content
+#content
 {
     padding: 20px;
     text-align: center;
     background-color: white;
 }
-#modal-content button {
+#content button, 
+#header button,
+#footer button {
     margin: 0 10px;
-    padding: 5px 10px;
+    padding: 15px 20px;
     cursor: pointer;
     border: none;
+    font-size: 20px;
+    font-weight: 400;
+    background-color: inherit;
 }
 #cancelModal{
-    background-color: rgb(237, 242, 237);
+    background-color: rgb(237, 242, 237) !important;
 }
 #addModal{
-    background-color: rgb(49, 130, 206);
+    background-color: rgb(49, 130, 206) !important;
     color: white;
 }
+.successNotif{
+    background-color: rgb(198, 246, 213);
+    padding: 0 15px;
+}
+.even{
+    background-color: rgb(237, 242, 247);
+}
+.odd{
+    background-color: rgb(247, 247, 251);
+}
+.even , 
+.odd{
+    padding: 2px;
+    margin: 0;
+    border: 1px transparent rgb(231, 237, 243);
+}
+#goBack{
+    background-color: rgb(174, 34, 34) !important;
+    color: white;
+}
+ 
